correct overflow: scroll and pre element bug

--- a/app/styles/_comfort-syntax.scss
+++ b/app/styles/_comfort-syntax.scss
@@ -11,7 +11,7 @@
 	// Specifying a border-radius property here will create an overflow bug
 	// where this element will be prevented from scrolling UNTIL styling is reapplied.
 	// Workaround is to specify border-radius and overflow between parent and child.
-	overflow: scroll;
+	overflow: auto;
 }
 
 .highlight code,.highlight pre {
